# RungeKuttaMethods

./: .gitignore  CMakeLists.txt  ChangeLog.rst  README.md  main.cpp  methods_fabric.inl
equation/: ThreeBody.h  equation.h
methods/: BaseRK.h
methods/AdaptiveMethods/: Merson.py  RKMerson.h
methods/ImplicitMethods/: bakward_euler.h  crank_nicolcon.h
methods/RK2/: ButcherMethod.h  HeunsMethod.h  RK2.h
methods/RK3/: Heun3dMethod.h  KuttaMethod.h
methods/RK4/: ClassicMethod.h
methods/utils/: vector_operations.h
plot/: matplotlibcpp.h
